--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: write
+      id-token: write
+      attestations: write
     env:
       NAME: TrackTagger
       RELEASE_ZIP_FILENAME: ${{ github.event.repository.name }}-${{ github.ref_name }}-win-x64.zip
@@ -27,8 +29,13 @@ jobs:
           Rename-Item out ${{ env.NAME }}
           Compress-Archive ${{ env.NAME }} ${{ env.RELEASE_ZIP_FILENAME }}
       - name: Release on GitHub
-        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
+        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631
         with:
           tag_name: ${{ github.ref_name }}
+          draft: false
           generate_release_notes: true
           files: ${{ env.RELEASE_ZIP_FILENAME }}
+      - name: Generate signed build provenance attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-path: ${{ env.RELEASE_ZIP_FILENAME }}
