--- a/TrackTagger.csproj
+++ b/TrackTagger.csproj
@@ -4,16 +4,13 @@
 		<TargetFramework>net9.0-windows</TargetFramework>
 		<OutputType>WinExe</OutputType>
 		<DebugType>embedded</DebugType>
-		<ApplicationIcon>Resources\icon.ico</ApplicationIcon>
+		<ApplicationIcon>assets\icon.ico</ApplicationIcon>
 		<Authors>Shibi J M</Authors>
 		<Copyright>© 2014-2025 $(Authors)</Copyright>
-		<Version>0.1.0</Version>
+		<Version>1.0.0</Version>
 		<FileVersion>$(Version)</FileVersion>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<UseWindowsForms>true</UseWindowsForms>
-	</PropertyGroup>
-
-	<PropertyGroup>
 		<PublishSingleFile>true</PublishSingleFile>
 		<SelfContained>false</SelfContained>
 		<IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
@@ -25,7 +22,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="TagLibSharp" Version="2.3.0"/>
+		<PackageReference Include="TagLibSharp" Version="2.3.0" />
 	</ItemGroup>
 
 </Project>
